--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,28 @@
+{% extends 'base.html' %}
 
+<!--
+ = = = = Head
+-->
+{% block head %}
+<title>Web Spectrometer</title>
+{% endblock %}
+
+
+<!--
+ = = = = Body
+-->
+{% block body %}
+<h1>Welcome!</h1>
+<p>
+    This is a controller for OceanOptics spectrometers which uses
+    as a base seabreeze, flask, socket.io and d3.js to allow gui-like and 
+    direct websocket connections.
+</p>
+<p>
+    <a href="{{ url_for('gui') }}">Click Here</a> for the GUI interface.
+</p>
+<p>
+    <a href="{{ url_for('raw') }}">Click Here</a> for the instructions to
+    access the spectrometer directly.
+</p>
+{% endblock %}
