--- a/app/templates/gui.html
+++ b/app/templates/gui.html
@@ -13,9 +13,35 @@
  = = = = Body
 -->
 {% block body %}
-<h1>Welcome!</h1>
-<button onclick="request_new_walk()">Get New Walk</button>
+<button onclick="add_overlay()">Add Overlay</button>
+<div>
+    <div class="parent">
+        <div class="col" id="aquisition_settings">
+            <div class="parent">
+                <div class="col" id="state">
+                    <div class="row_header">State Params</div>
+                    <div class="row" style="text-align:left;">IT: <input class="int_input" id="it" type="text"/>ms</div>
+                    <div class="row" style="text-align:left;">Ave: <input class="int_input" id="ave" type="text"/></div>
+                </div>
+                <div class="col" id="buttons">
+                    <div class="row_header">Controls</div>
+                    <div class="row"><button id="play-button" onclick="play()">&#9654;</button></div><!--Play-->
+                    <div class="row"><button id="pause-button" onclick="pause()">&#x23f8;</button></div><!--Pause-->
+                    <div class="row"><button id="single-button" onclick="single()">&#x23ef;</button></div><!--Single-->
+                </div>
+            </div>
+        </div>
+        <div class="col" id="x_type">
+            <div class="row_header">x scale</div>
+        </div>
+        <div class="col" id="y_type">
+            <div class="row_header">y scale</div>
+        </div>
+    </div>
+</div>
+
 <div id="svg-container" class="container"></div>
+<div id="current-trace" visibility="hidden"></div>
 <div id="log"></div>
 {% endblock %}
 
