--- a/flask/app/templates/gui.html
+++ b/flask/app/templates/gui.html
@@ -3,9 +3,11 @@
 <!--
  = = = = Head
 -->
+{% block title %}
+Spectrometer GUI
+{% endblock %}
 {% block head %}
-<title>Spectrometer GUI</title>
-<LINK href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
+<LINK href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 
@@ -17,27 +19,60 @@
   <button class="btn btn-primary" onclick="add_overlay()">Add Overlay</button>
   <button class="btn btn-primary" onclick="save_as()">Save As</button>
 
-  <div class="row">
-      <div class="card bg-warning col-sm" id="aquisition_settings">
-          <div class="row">
-              <div class="col-sm" id="state">
-                  <div class="row_header">State Params</div>
-                  <div class="" style="text-align:left;">IT: <input class="int_input" id="it" type="text"/>ms</div>
-                  <div class="" style="text-align:left;">Ave: <input class="int_input" id="ave" type="text"/></div>
+  <div class="row m-0">
+      <div class="card bg-warning col-sm p-0" id="aquisition_settings">
+          <div class="row m-0">
+              <div class="col-7 my-auto" id="state">
+                <div class="row m-0">
+                  <div class="col-12">
+                    <div class="row_header">State Params</div>
+                  </div>
+                </div>
+                <div class="row m-0">
+                  <div class="col-3 p-0 my-auto">
+                    TI
+                  </div>
+                  <div class="col-5 p-0 my-auto">
+                    <input class="int_input w-100" id="it" type="text"/>
+                  </div>
+                  <div class="col-4 p-0 my-auto">
+                    ms
+                  </div>
+                </div>
+                <div class="row m-0">
+                  <div class="col-3 p-0 my-auto">
+                    Ave
+                  </div>
+                  <div class="col-5 p-0 my-auto">
+                    <input class="int_input w-100" id="ave" type="text"/>
+                  </div>
+                </div>
+                  <!-- <div class="" style="text-align:left;">IT: <input class="int_input" id="it" type="text"/>ms</div>
+                  <div class="" style="text-align:left;">Ave: <input class="int_input" id="ave" type="text"/></div> -->
               </div>
-              <div class="col-sm" id="buttons">
-                  <div class="row_header">Controls</div>
-                  <div class=""><button id="play-button" class="btn btn-dark" onclick="play()">&#9654;</button></div><!--Play-->
-                  <div class=""><button id="pause-button" class="btn btn-dark" onclick="pause()">&#x23f8;</button></div><!--Pause-->
-                  <div class=""><button id="single-button" class="btn btn-dark" onclick="single()">&#x23ef;</button></div><!--Single-->
+              <div class="col-5 my-auto" id="buttons">
+                <div class="row_header">Controls</div>
+                <div class="row m-1">
+                  <button id="play-button" class="btn btn-success w-100 text-center" onclick="play()">&#9654;</button>
+                </div>
+                <div class="row m-1">
+                  <button id="pause-button" class="btn btn-success w-100 text-center" onclick="pause()">&#x23f8;</button>
+                </div>
+                <div class="row m-1">
+                  <button id="single-button" class="btn btn-success w-100 text-center" onclick="single()">&#x23ef;</button>
+                </div>
               </div>
           </div>
       </div>
-      <div class="card bg-warning col-sm" id="x_type">
-          <div class="row_header">x scale</div>
-      </div>
-      <div class="card bg-warning col-sm" id="y_type">
-          <div class="row_header">y scale</div>
+      <div class="card bg-warning col-sm p-0">
+        <div class="row m-0">
+          <div class="col-6" id="x_type">
+              <div class="row_header">x scale</div>
+          </div>
+          <div class="col-6" id="y_type">
+              <div class="row_header">y scale</div>
+          </div>
+        </div>
       </div>
   </div>
 
@@ -55,5 +90,6 @@
 <script src="{{ url_for('static', filename='socketio/socket.io.js') }}"></script>
 <script src="{{ url_for('static', filename='d3/d3.js') }}"></script>
 <script src="{{ url_for('static', filename='filesaver/FileSaver_old.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/plot.js') }}"></script>
 <script src="{{ url_for('static', filename='js/render_plot.js') }}"></script>
 {% endblock %}
