--- a/flask/app/templates/base.html
+++ b/flask/app/templates/base.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
 
-        <title>Plot Rendering App</title>
-        <p>
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('gui') }}">GUI</a>
-            <a href="{{ url_for('raw') }}">Raw</a>
-        </p>
+    <title>{% block title %}{% endblock %}</title>
 
+    {% block head %}{% endblock %}
+  </head>
 
-        {% block head %}{% endblock %}
-    </head>
+  <body onload="on_load()">
 
-    <body onload="on_load()">
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
+    <div id="navbar-container" class="container">
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('gui') }}">GUI</a>
+        <a href="{{ url_for('raw') }}">Raw</a>
+    </div>
+
+    <hr>
+    <div id="flash-container" class="container">
+      {% with messages = get_flashed_messages() %}
+          {% if messages %}
             {% for ms in messages %}
-                <li>{{ ms }}</li>
+              <div class ="alert alert-success alert-dismissible show" role="alert">
+                {{ ms }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
             {% endfor %}
-        </ul>
-        {% endif %}
+          {% endif %}
+      {% endwith %}
+    </div>
 
-        {% endwith %}
-        {% block body %}{% endblock %}
-        <script>on_load = function() {};</script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        {% block scripts %}{% endblock %}
-    </body>
+
+    {% block body %}{% endblock %}
+
+
+    <script>on_load = function() {};</script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
+    <script src="{{ url_for('static', filename='jquery/jquery-3.4.1.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='bootstrap/bootstrap.min.js') }}" type="text/x-js"></script>
+
+    {% block scripts %}{% endblock %}
+  </body>
 </html>
