--- a/flask/app/templates/raw.html
+++ b/flask/app/templates/raw.html
@@ -3,8 +3,8 @@
 <!--
  = = = = Head
 -->
-{% block head %}
-<title>Spectrometer Raw</title>
+{% block title %}
+Spectrometer Raw
 {% endblock %}
 
 
@@ -38,14 +38,14 @@
     >>> print(c)
 </p>
 <p>
-    Which should print something like: "Remote Wrapper Spectrometer Manager : 
-    1 devices: Current: None" If you get something like: "Remote Wrapper 
+    Which should print something like: "Remote Wrapper Spectrometer Manager :
+    1 devices: Current: None" If you get something like: "Remote Wrapper
     pointed at 10.0.0.1:8001" it means the seabreeze-server is malfunctioning
     and you should contact the system administrator.
 </p>
 <p>
     Then that client object will give you access to the seabreeze-server object
-    which controls to spectrometer. See the documentation for 
+    which controls to spectrometer. See the documentation for
     <a href="https://github.com/jonathanvanschenck/python-seabreeze-server">
     seabreeze-server</a> to see how to use it.
 </p>
