--- a/flask/app/templates/gui.html
+++ b/flask/app/templates/gui.html
@@ -20,7 +20,7 @@ Spectrometer GUI
   <button class="btn btn-primary" onclick="save_as()">Save As</button>
 
   <div class="row m-0">
-      <div class="card bg-warning col-sm p-0" id="aquisition_settings">
+      <div class="card bg-light col-sm p-0" id="aquisition_settings">
           <div class="row m-0">
               <div class="col-7 my-auto" id="state">
                 <div class="row m-0">
@@ -64,13 +64,16 @@ Spectrometer GUI
               </div>
           </div>
       </div>
-      <div class="card bg-warning col-sm p-0">
+      <div class="card bg-light col-sm p-0">
         <div class="row m-0">
-          <div class="col-6" id="x_type">
-              <div class="row_header">x scale</div>
+          <div class="col-4" id="conf_type">
+              <div class="row_header">Configuration</div>
           </div>
-          <div class="col-6" id="y_type">
-              <div class="row_header">y scale</div>
+          <div class="col-4" id="x_type">
+              <div class="row_header">X Scale</div>
+          </div>
+          <div class="col-4" id="y_type">
+              <div class="row_header">Y Scale</div>
           </div>
         </div>
       </div>
