--- a/flask/app/templates/gui.html
+++ b/flask/app/templates/gui.html
@@ -93,6 +93,7 @@ Spectrometer GUI
 <script src="{{ url_for('static', filename='socketio/socket.io.js') }}"></script>
 <script src="{{ url_for('static', filename='d3/d3.js') }}"></script>
 <script src="{{ url_for('static', filename='filesaver/FileSaver_old.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/plot.js') }}"></script>
-<script src="{{ url_for('static', filename='js/render_plot.js') }}"></script>
+<script src="{{ url_for('static', filename='js/classes.js') }}"></script>
+<script src="{{ url_for('static', filename='js/functions.js') }}"></script>
+<script src="{{ url_for('static', filename='js/onload.js') }}"></script>
 {% endblock %}
